// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render component with data, with tableHead, with colWidths, sorted ASC by Id 1`] = `
<table>
  <colgroup>
    <col
      width={50}
    />
    <col
      width={25}
    />
  </colgroup>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        Id
        <i
          className="arrow down"
        />
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <button>
          Edit
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <button>
          Edit
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> should render component with data, with tableHead, with colWidths, sorted ASC by Name 1`] = `
<table>
  <colgroup>
    <col
      width={50}
    />
    <col
      width={25}
    />
  </colgroup>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        Id
      </th>
      <th
        onClick={[Function]}
      >
        Name
        <i
          className="arrow down"
        />
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <button>
          Edit
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <button>
          Edit
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> should render component with data, with tableHead, with colWidths, sorted DESC by Id 1`] = `
<table>
  <colgroup>
    <col
      width={50}
    />
    <col
      width={25}
    />
  </colgroup>
  <thead>
    <tr>
      <th
        onClick={[Function]}
      >
        Id
        <i
          className="arrow up"
        />
      </th>
      <th
        onClick={[Function]}
      >
        Name
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <button>
          Edit
        </button>
      </td>
    </tr>
    <tr>
      <td>
        <button>
          Edit
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
